Fix issue with speed controls flickering

--- a/app/styles/components/audioplayer.scss
+++ b/app/styles/components/audioplayer.scss
@@ -63,6 +63,10 @@
   z-index:3;
   top:-29px;
   bottom:auto;
+
+  &.closed {
+    display: none;
+  }
 }
 .speed-control {
   position:absolute;
